Unifying Docker deployment for #817